cmd/kubernetes/operator/kodata/hub/v1.4.0/ui/ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      name: ui
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: quay.io/tekton-hub/ui:v1.4.0
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-hub-ui
  namespace: tekton-pipelines
  labels:
    app: ui
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-hub-ui
  namespace: tekton-pipelines
  labels:
    app: ui
  annotations:
    kubernetes.io/ingress.class: ingress-class
spec:
  rules:
    - host: hub.ingress.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-hub-ui
                port:
                  number: 8080
